--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <div class="backdrop is-hidden" data-modal>
         <div class="data-modal">
             <span class="data-modal-close" data-modal-close>
-                <a class="close" href="">
+                <button type="button" class="close" href="">
                     <svg class="hr">
                         <use href="symbol-defs.svg#icon-hrestuk"></use>
                     </svg>
-                </a>
+                </button>>
             </span>
         </div>
     </div>
