--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <a class="icon" href="index.html">WEB<span class="subject">STUDIO</span></a>
                 <nav>
                     <ul class="ullist">
-                        <li class="item1000"><a href="index.html" class="text7">Studio</a></li>
-                        <li class="item1000"><a href="portfolio.html" class="text7">Portfolio</a></li>
-                        <li class="item1000"><a href="#" class="text7">Contacts</a></li>
+                        <li class="item1000"><a class="page current-page" href ="index.html">Studio</a></li>
+                        <li class="item1000"><a class="page" href="portfolio.html">Portfolio</a></li>
+                        <li class="item1000"><a class="page" href="#">Contacts</a></li>
                     </ul>
                 </nav>
                     <ul class="ullist1">
