--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,9 @@
                 <a class="icon" href="index.html">WEB<span class="subject">STUDIO</span></a>
                 <nav>
                     <ul class="ullist">
-                        <li class="item1000"><a class="text7" href="index.html">Studio</a></li>
-                        <li class="item1000"><a class="text7" href="portfolio.html">Portfolio</a></li>
-                        <li class="item1000"><a class="text7" href="#">Contacts</a></li>
+                        <li class="item1000"><a class="page current-page" href="index.html">Studio</a></li>
+                        <li class="item1000"><a class="page" href="portfolio.html">Portfolio</a></li>
+                        <li class="item1000"><a class="page" href="#">Contacts</a></li>
                     </ul>
                 </nav>
                     <ul class="ullist1">
