--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <a class="icon" href="index.html">WEB<span class="subject">STUDIO</span></a>
                 <nav>
                     <ul class="ullist">
-                        <li class="item1000"><a class="page current-page" href ="index.html">Studio</a></li>
-                        <li class="item1000"><a class="page" href="portfolio.html">Portfolio</a></li>
-                        <li class="item1000"><a class="page" href="#">Contacts</a></li>
+                        <li class="item1000"><a class="page current" href ="index.html">Studio</a></li>
+                        <li class="item1000"><a class="page current" href="portfolio.html">Portfolio</a></li>
+                        <li class="item1000"><a class="page current" href="#">Contacts</a></li>
                     </ul>
                 </nav>
                     <ul class="ullist1">
@@ -35,8 +35,6 @@
         <div class="container">
             <h1>Effective Solutions for Your Business</h1>
             <button data-modal-open class="link0" type="button">Order Service</button>
-
-
     <div class="backdrop is-hidden" data-modal>
         <div class="data-modal">
             <span class="data-modal-close" data-modal-close>
