--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
                 <a class="icon" href="index.html">WEB<span class="subject">STUDIO</span></a>
                 <nav>
                     <ul class="ullist">
-                        <li class="item1000"><a class="page current" href ="index.html">Studio</a></li>
-                        <li class="item1000"><a class="page current" href="portfolio.html">Portfolio</a></li>
-                        <li class="item1000"><a class="page current" href="#">Contacts</a></li>
+                        <li class="item1000">
+                            <a class="current" href ="index.html">Studio</a>
+                        </li>
+                        <li class="item1000">
+                            <a class="page" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="item1000">
+                            <a class="page" href="#">Contacts</a>
+                        </li>
                     </ul>
                 </nav>
                     <ul class="ullist1">
